<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night_gradient"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/location_pin"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/location_pin_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/city_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/city"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/country_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/country_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/temp_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_tv" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/status"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/temp_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/settings_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings" />

        <TextView
            android:id="@+id/temp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_default"
            android:textAlignment="center"
            android:textSize="84sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/degree_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degrees_symbol"
            android:textSize="84sp"
            app:layout_constraintStart_toEndOf="@+id/temp_tv"
            app:layout_constraintTop_toTopOf="@+id/temp_tv" />

        <ImageView
            android:id="@+id/bg_card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:alpha="0.2"
            app:layout_constraintBottom_toBottomOf="@+id/bg_card2"
            app:layout_constraintEnd_toStartOf="@+id/bg_card2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_card2"
            app:srcCompat="@drawable/background_card" />

        <ImageView
            android:id="@+id/ic_sunrise"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card1"
            app:layout_constraintStart_toStartOf="@+id/bg_card1"
            app:layout_constraintTop_toTopOf="@+id/bg_card1"
            app:srcCompat="@drawable/ic_sunrise" />

        <TextView
            android:id="@+id/sunrise_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Sunrise"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card1"
            app:layout_constraintStart_toStartOf="@+id/bg_card1"
            app:layout_constraintTop_toBottomOf="@+id/ic_sunrise" />

        <TextView
            android:id="@+id/sunrise_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="5:45 AM"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintBottom_toBottomOf="@+id/bg_card1"
            app:layout_constraintEnd_toEndOf="@+id/bg_card1"
            app:layout_constraintStart_toStartOf="@+id/bg_card1" />

        <ImageView
            android:id="@+id/bg_card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:alpha="0.2"
            app:layout_constraintEnd_toStartOf="@+id/bg_card3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bg_card1"
            app:layout_constraintTop_toBottomOf="@+id/temp_tv"
            app:srcCompat="@drawable/background_card" />

        <ImageView
            android:id="@+id/ic_sunset"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card2"
            app:layout_constraintStart_toStartOf="@+id/bg_card2"
            app:layout_constraintTop_toTopOf="@+id/bg_card2"
            app:srcCompat="@drawable/ic_sunset" />

        <TextView
            android:id="@+id/sunset_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Sunset"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card2"
            app:layout_constraintStart_toStartOf="@+id/bg_card2"
            app:layout_constraintTop_toBottomOf="@+id/ic_sunset" />

        <TextView
            android:id="@+id/sunset_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="6:30 PM"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintBottom_toBottomOf="@+id/bg_card2"
            app:layout_constraintEnd_toEndOf="@+id/bg_card2"
            app:layout_constraintStart_toStartOf="@+id/bg_card2" />

        <ImageView
            android:id="@+id/bg_card3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:alpha="0.2"
            app:layout_constraintBottom_toBottomOf="@+id/bg_card2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bg_card2"
            app:layout_constraintTop_toTopOf="@+id/bg_card2"
            app:srcCompat="@drawable/background_card" />

        <ImageView
            android:id="@+id/ic_wind"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card3"
            app:layout_constraintStart_toStartOf="@+id/bg_card3"
            app:layout_constraintTop_toTopOf="@+id/bg_card3"
            app:srcCompat="@drawable/ic_wind" />

        <TextView
            android:id="@+id/wind_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Wind"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card3"
            app:layout_constraintStart_toStartOf="@+id/bg_card3"
            app:layout_constraintTop_toBottomOf="@+id/ic_wind" />

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="5.16"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintBottom_toBottomOf="@+id/bg_card3"
            app:layout_constraintEnd_toEndOf="@+id/bg_card3"
            app:layout_constraintStart_toStartOf="@+id/bg_card3" />

        <ImageView
            android:id="@+id/bg_card4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:alpha="0.2"
            app:layout_constraintBottom_toBottomOf="@+id/bg_card5"
            app:layout_constraintEnd_toStartOf="@+id/bg_card5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_card5"
            app:srcCompat="@drawable/background_card" />

        <ImageView
            android:id="@+id/ic_humidity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card4"
            app:layout_constraintStart_toStartOf="@+id/bg_card4"
            app:layout_constraintTop_toTopOf="@+id/bg_card4"
            app:srcCompat="@drawable/ic_humidity" />

        <TextView
            android:id="@+id/humidity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Humidity"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card4"
            app:layout_constraintStart_toStartOf="@+id/bg_card4"
            app:layout_constraintTop_toBottomOf="@+id/ic_humidity" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="85"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintBottom_toBottomOf="@+id/bg_card4"
            app:layout_constraintEnd_toEndOf="@+id/bg_card4"
            app:layout_constraintStart_toStartOf="@+id/bg_card4" />

        <ImageView
            android:id="@+id/bg_card5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:alpha="0.2"
            app:layout_constraintEnd_toStartOf="@+id/bg_card6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bg_card4"
            app:layout_constraintTop_toBottomOf="@+id/bg_card2"
            app:srcCompat="@drawable/background_card" />

        <ImageView
            android:id="@+id/ic_pressure"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card5"
            app:layout_constraintStart_toStartOf="@+id/bg_card5"
            app:layout_constraintTop_toTopOf="@+id/bg_card5"
            app:srcCompat="@drawable/ic_pressure" />

        <TextView
            android:id="@+id/pressure_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Pressure"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card5"
            app:layout_constraintStart_toStartOf="@+id/bg_card5"
            app:layout_constraintTop_toBottomOf="@+id/ic_pressure" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="1004"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintBottom_toBottomOf="@+id/bg_card5"
            app:layout_constraintEnd_toEndOf="@+id/bg_card5"
            app:layout_constraintStart_toStartOf="@+id/bg_card5" />

        <ImageView
            android:id="@+id/bg_card6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:alpha="0.2"
            app:layout_constraintBottom_toBottomOf="@+id/bg_card5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bg_card5"
            app:layout_constraintTop_toTopOf="@+id/bg_card5"
            app:srcCompat="@drawable/background_card" />

        <ImageView
            android:id="@+id/ic_rain"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card6"
            app:layout_constraintStart_toStartOf="@+id/bg_card6"
            app:layout_constraintTop_toTopOf="@+id/bg_card6"
            app:srcCompat="@drawable/ic_rain" />

        <TextView
            android:id="@+id/rain_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Rainfall"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/bg_card6"
            app:layout_constraintStart_toStartOf="@+id/bg_card6"
            app:layout_constraintTop_toBottomOf="@+id/ic_rain" />

        <TextView
            android:id="@+id/rainfall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="50%"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintBottom_toBottomOf="@+id/bg_card6"
            app:layout_constraintEnd_toEndOf="@+id/bg_card6"
            app:layout_constraintStart_toStartOf="@+id/bg_card6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>